# mycelium-ai-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  lcm.db  lcm_demo.db  package.json  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  colonial_memory_bench.mjs  colonial_memory_demo.py  e2e_demo.py  run_benchmark.py
benchmarks/results/colonial/: latest.json
benchmarks/results/solo/: latest.json
config/: model-mapping.md  models.yaml  rules.yaml
core/: __init__.py  __main__.py  mycelium.py  providers.py
dashboard/: index.html
docs/: ARCHITECTURE.md  COLONIAL-MEMORY-ARCHITECTURE.md  DEPLOYMENT.md  ENFORCEMENT.md  EVENT-BUS.md  GRANT-PITCH.md  HYPOTHESIS.md  LESSONS.md  MYCELIUM-CLAW-PLAN.md  PROJECT-PLAN.md  ROADMAP.md  SCOUT-SWARM.md  SELF-IMPROVEMENT.md  SKILL-MCP-INTEGRATION.md  SRE-RELIABILITY.md  WHITEPAPER.md
hyphae/: README.md
memory/lessons/: deployment.md  model-selection.md
memory/missions/: deploy-crypto-dashboard.md  deploy-cv-it1st.md  model-selection.md
neural-bridge/: Cargo.toml
neural-bridge/benches/: bridge_bench.rs
neural-bridge/src/: consolidator.rs  crystallizer.rs  error.rs  hyphae.rs  lib.rs  main.rs  router.rs  spore.rs  spore_server.rs  store.rs  taxonomy.rs  types.rs
registry/: REGISTRY.md
registry/roles/: engineering-ai-data-remediation-engineer.md  engineering-ai-engineer.md  engineering-autonomous-optimization-architect.md  engineering-backend-architect.md  engineering-code-reviewer.md  engineering-data-engineer.md  engineering-database-optimizer.md  engineering-devops-automator.md  engineering-embedded-firmware-engineer.md  engineering-feishu-integration-developer.md  engineering-frontend-developer.md  engineering-git-workflow-master.md  engineering-incident-response-commander.md  engineering-mobile-app-builder.md  engineering-rapid-prototyper.md  engineering-security-engineer.md  engineering-senior-developer.md  engineering-software-architect.md  engineering-solidity-smart-contract-engineer.md  engineering-sre.md  engineering-technical-writer.md  engineering-threat-detection-engineer.md  engineering-wechat-mini-program-developer.md
registry/roles/academic/: academic-anthropologist.md  academic-geographer.md  academic-historian.md  academic-narratologist.md  academic-psychologist.md
registry/roles/design/: design-brand-guardian.md  design-image-prompt-engineer.md  design-inclusive-visuals-specialist.md  design-ui-designer.md  design-ux-architect.md  design-ux-researcher.md  design-visual-storyteller.md  design-whimsy-injector.md
registry/roles/examples/: README.md  (+5 more)
rhizomorph/: README.md  lcm.py
scripts/: bootstrap-knowledge.sh  curator.py  event-bus-graph.py  event-bus-visualize.sh  event-bus.sh  pre-commit  validate-write.sh
src/: cli.mjs  delegation.mjs  mycelium.mjs  pipeline_payload.py  providers.mjs  rhizomorph.mjs  yaml.mjs
templates/: AGENTS.md  HEARTBEAT.md  SOUL.md
templates/cron/: army-ant-checks.json  mycelium-cycle.json
tests/: __init__.py  test.mjs  test_delegation.mjs  test_mycelium.py
(+136 files in other folders)
